--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "swiper": "^11.0.5",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
